<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/idtitreint2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="40dp"
        android:text="@string/idr"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView3"
        android:layout_marginRight="17dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idtitreimc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tvimc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idpoint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idcttxt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tvcat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idpoint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idhint1"
            android:textColor="#fff" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/ett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idhintm"
            android:textColor="#fff" />

        <Button
            android:id="@+id/bc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/idbtntxt"
            android:textColor="#fff" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/idpara1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

</RelativeLayout>